Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6, 10.11, 11.4
-
None
Description
While testing latest MariaDB 11.4.3 I ran into this MTR failure which seems like some kind of regression:
main.mysqld--help-aria w2 [ fail ]
|
Test ended at 2024-08-09 17:00:48
|
|
|
CURRENT_TEST: main.mysqld--help-aria
|
--- /tmp/build/source/mysql-test/main/mysqld--help-aria.result 2024-06-06 20:49:59.511836568 +0000
|
+++ /tmp/build/source/mysql-test/main/mysqld--help-aria.reject 2024-08-09 17:00:48.426958935 +0000
|
@@ -1,9 +1,12 @@
|
flush tables;
|
+[ERROR] feedback plugin: failed to retrieve the MAC address
|
#
|
# Check that we don't write any data to wrong or not existing datadir
|
#
|
+[ERROR] feedback plugin: failed to retrieve the MAC address
|
[Warning] Could not open mysql.plugin table: "Table 'mysql.plugin' doesn't exist". Some options may be missing from the help text
|
#
|
# Check with existing directory
|
#
|
+[ERROR] feedback plugin: failed to retrieve the MAC address
|
[Warning] Could not open mysql.plugin table: "Table 'mysql.plugin' doesn't exist". Some options may be missing from the help text
|
|
|
Result length mismatch
|
I will add further details later after more testing.
Attachments
Issue Links
- relates to
-
MDEV-11763 All ipv6-related tests fail in buildbot on bld-dan builders
-
- Closed
-
-
MDEV-34494 Add server_uid global variable and add it to error log at startup
-
- Closed
-