mysql-test/mysql-test-run.pl
@@ -4487,7 +4487,7 @@ sub extract_warning_lines ($$) {
      qr|InnoDB: io_setup\(\) failed with EAGAIN|,
      qr/InnoDB: Failed to set (O_DIRECT|DIRECTIO_ON) on file/,
      qr|setrlimit could not change the size of core files to 'infinity';|,
-     qr|feedback plugin: failed to retrieve the MAC address|,
+     qr|failed to retrieve the MAC address|,
      qr|Plugin 'FEEDBACK' init function returned error|,
      qr|Plugin 'FEEDBACK' registration as a INFORMATION SCHEMA failed|,
      qr|'log-bin-use-v1-row-events' is MySQL .* compatible option|,
